# weather

./: .bazel_fix_commands.json  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  db-fly.toml  fly.toml  go.mod  go.sum  justfile  main.go
sensors/: Dockerfile  docker-compose.yml  main.py
templates/: index.html.tmpl  nav.html.tmpl
