load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/scottshuffler/weather
gazelle(name = "gazelle")

go_library(
    name = "weather_lib",
    srcs = ["main.go"],
    embedsrcs = [
        "templates/index.html.tmpl",
        "templates/history.html.tmpl",
        "templates/nav.html.tmpl",
    ],
    importpath = "github.com/scottshuffler/weather",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_jackc_pgx_v5//:pgx",
    ],
)

go_binary(
    name = "weather",
    embed = [":weather_lib"],
    visibility = ["//visibility:public"],
)
