load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/scottshuffler/weather
gazelle(name = "gazelle")

# go_library(
#     name = "weather_lib",
#     srcs = [
#         "components_templ.go",
#         "main.go",
#     ],
#     embedsrcs = [
#         "templates/index.html.tmpl",
#         "templates/history.html.tmpl",
#         "templates/nav.html.tmpl",
#         "static/wind.svg",
#         "static/temp.svg",
#     ],
#     importpath = "github.com/scottshuffler/weather",
#     visibility = ["//visibility:private"],
#     deps = [
#         "@com_github_a_h_templ//:go_default_library",
#         "@com_github_gin_gonic_gin//:go_default_library",
#         "@com_github_jackc_pgx_v5//:go_default_library",
#     ],
# )

# go_binary(
#     name = "weather",
#     embed = [":weather_lib"],
#     visibility = ["//visibility:public"],
# )

go_library(
    name = "weather_lib",
    srcs = ["main.go"],
    embedsrcs = [
        "templates/index.html.tmpl",
        "templates/nav.html.tmpl",
    ],
    importpath = "github.com/scottshuffler/weather",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_jackc_pgx_v5//:pgx",
    ],
)

go_binary(
    name = "weather",
    embed = [":weather_lib"],
    visibility = ["//visibility:public"],
)
