load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

gazelle(name = "gazelle")

go_library(
    name = "weather_lib",
    srcs = ["main.go"],
    embedsrcs = [
        "templates/index.html.tmpl",
        "assets/htmx.min.js",
    ],
    importpath = "github.com/scottshuffler/weather",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_jackc_pgx_v5//:pgx",
    ],
)

go_binary(
    name = "weather",
    embed = [":weather_lib"],
    visibility = ["//visibility:public"],
)
