###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
module(
    name = "weather",
    repo_name = "weather",
)

bazel_dep(name = "rules_go", version = "0.41.0")
bazel_dep(name = "gazelle", version = "0.35.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Download an SDK for the host OS & architecture as well as common remote execution platforms.
# go_sdk.download(version = "1.20.3")

# Alternately, download an SDK for a fixed OS/architecture.
go_sdk.download(
    version = "1.22.0",
    goarch = "arm64",
    goos = "darwin",
)

# Register the Go SDK installed on the host.
go_sdk.host()

use_repo(
    go_sdk,
    "go_toolchains",
    # This name is ugly on purpose to avoid a conflict with a user-named SDK.
    # "io_bazel_rules_nogo",
)

register_toolchains("@go_toolchains//:all")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_gin_gonic_gin",
    "com_github_jackc_pgx_v5",
)
